--- a/views/proveedor.ejs
+++ b/views/proveedor.ejs
@@ -21,19 +21,23 @@
 			</nav>
 		</div>
 	</header>
-	<div class="capa">
-        <div>
-			<input type="text" name="id_prov" id="" placeholder="ID" required>
-			<input type="text" name="nombre" id="" placeholder="Nombre" required>
-			<input type="text" name="Direccion" id="" placeholder="Direccion" required>
-			<input type="text" name="telfono" id="" placeholder="Telefono" required>
-			<button type="button">Create</button>
-			<button type="button">Read</button>
-			<button type="button">Update</button>
-			<button type="button">Delete</button>
-			<button type="button">Buscar</button>
-		</div>
-    </div>
+	<div class="capa"></div>
+    <div id="contenedorformulario">
+		<form action="">
+			<fieldset>
+
+				<input type="text" name="id_prov" id="" placeholder="ID" required>
+				<input type="text" name="nombre" id="" placeholder="Nombre" required>
+				<input type="text" name="Direccion" id="" placeholder="Direccion" required>
+				<input type="text" name="telfono" id="" placeholder="Telefono" required>
+				<button type="button">Create</button>
+				<button type="button">Read</button>
+				<button type="button">Update</button>
+				<button type="button">Delete</button>
+				<button type="button">Buscar</button>
+			</fieldset>
+		</form>
+	</div>
 
 </body>
 </html>
