--- a/public/sources/css/cliente.css
+++ b/public/sources/css/cliente.css
@@ -11,7 +11,7 @@ body {
 
 /* efectos para el contenedor de pantalla completa */
 #contenedor {
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
     
@@ -27,33 +27,7 @@ body {
     background-size: cover;
 }
 
-/* contenedor del login a la izquierda */
-#contenedorcentrado {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction:row;
-    
-    min-width: 380px;
-    max-width: 900px;
-    width: 90%;
-    
-    background-color: #5f6769;
-    
-    /*opacity: 0.50;
-    filter: alpha(opacity=50);*/
-    
-    border-radius: 10px 10px 10px 10px;
-    -moz-border-radius: 10px 10px 10px 10px;
-    -webkit-border-radius: 10px 10px 10px 10px;
-    
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    
-    padding: 30px;
-    box-sizing: border-box;
-}
+
 
 /* formulario de login */
 /* formulario de login */
@@ -62,27 +36,21 @@ body {
     width: 100%;
     max-width: 640px;
     min-width: 320px;
-    padding: 30px 30px 50px 30px;
-    background-color: #719192;
     
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
-    
-    box-sizing: border-box;
     
     opacity: 1;
     filter: alpha(opacity=1);
 }
 
+.divinput{
+    display: inline;
+    max-width: 100vw;
+    width: 100%;
+}
 #login label {
     display: inline;
     font-family: 'Overpass', sans-serif;
-    font-size: 120%;
+    font-size: 110%;
     color:#3c4245;
     
     margin-top: 15px;
@@ -90,11 +58,11 @@ body {
 
 #login input {
     font-family: 'Overpass', sans-serif;
-    font-size: 110%;
+    font-size: 100%;
     color: #1b262c;
     
     display: inline;
-    width: 24%;
+    width: 20%;
     height: 40px;
     
     margin-bottom: 10px;
@@ -193,27 +161,14 @@ hr {
 @media all and (max-width: 775px)
 {
     #contenedorcentrado {
-        flex-direction:column-reverse;
 
         min-width: 380px;
         max-width: 900px;
         width: 90%;
 
-        background-color: #5f6769;
 
-        /*opacity: 0.50;
-        filter: alpha(opacity=50);*/
-
-        border-radius: 10px 10px 10px 10px;
-        -moz-border-radius: 10px 10px 10px 10px;
-        -webkit-border-radius: 10px 10px 10px 10px;
-
-        -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-        -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
         box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
 
-        padding: 30px;
-        box-sizing: border-box;
     }
     
     #login {
@@ -231,11 +186,6 @@ hr {
 /* ajustar a pantallas con ancho menor o igual a 775px; */
 /* ajustar a pantallas con ancho menor o igual a 775px; */
 
-.capa{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0,0,0,0.6);
-    z-index: -1;
-    top: 0;left: 0;
-}
+
+
+
