--- a/views/cliente.ejs
+++ b/views/cliente.ejs
@@ -9,44 +9,73 @@
         <meta charset="utf-8">
         
         <title>La Ceiba</title>    
-        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
         <meta name="author" content="Videojuegos & Desarrollo">
         <meta name="description" content="Ejemplo de formulario de acceso basado en HTML5 y CSS">
         <meta name="keywords" content="login,formulariode acceso html">
         <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-        
         <!-- Link hacia el archivo de estilos css -->
-        <link rel="stylesheet" href="../sources/css/crud.css">
-                
+        <link rel="stylesheet" href="../sources/css/cliente.css">
     </head>
-    
     <body>
-    
         <div id="contenedor">
-            
             <div id="contenedorcentrado">
                 <div id="login">
                     <form id="loginform" action="/login">
-                        <input type="text" name="id_cliente" id="id_cliente" placeholder="ID" required>
-						<input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
-						<input type="text" name="Direccion" id="direccion" placeholder="Direccion" required>
-						<input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
-						<button type="button">Create</button>
-						<button type="button">Read</button>
-						<button type="button">Update</button>
-						<button type="button">Delete</button>
-						<button type="button">Buscar</button>
+                        <fieldset>
+                            <div class="divinput">
+                                <label for="id_cliente">ID</label>
+                                <input type="text" name="id_cliente" id="id_cliente" placeholder="ID" required>
+                            </div>
+                            <div class="divinput">
+                                <label for="nombre">Nombre</label>
+                                <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
+                            </div>
+                            <div class="divinput">
+                                <label for="direccion">Direccion</label>
+                                <input type="text" name="direccion" id="direccion" placeholder="Direccion" required>
+                            </div>
+                            <div class="divinput">
+                                <label for="telefono">Telefono</label>
+                                <input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
+                            </div>
+                            <div class="divbutton">
+                                <button type="button">Create</button>
+                                <button type="button">Read</button>
+                                <button type="button">Update</button>
+                                <button type="button">Delete</button>
+                                <button type="button">Buscar</button>
+                            </div>
+                        </fieldset>
                     </form>
                 </div>
+            </div>
+            <div id="contenedortabla">
+                <table>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Direccion</th>
+                        <th>Telefono</th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <%=id_usu %>
+                        </th>
+                        <th>
+                            <%=nombre %>
+                        </th>
+                        <th>
+                            <%=direccion%>
+                        </th>
+                        <th>
+                            <%=telefono%>
+                        </th>
+                    </tr>
+                </table>
             </div>
         </div>
         
     </body>
 </html>
-        <div>
-			<!----Cliente---->
-			
-		</div>
