--- a/views/loginadm.ejs
+++ b/views/loginadm.ejs
@@ -33,7 +33,7 @@
 			<a href="/gocliente">Tabla Cliente</a>
 			<a href="/gopedido">Tabla Pedido</a>
 			<a href="/goproducto">Tabla Producto</a>
-			<a href="/gocategorias">Tabla Categoria</a>
+			<a href="/gocategoria">Tabla Categoria</a>
 			<a href="/">Tabla Usuarios</a>
 			<a href="/paginas/registrarsehtml">Agregar Usuario</a>
 		</nav>
