--- a/views/loginadm.ejs
+++ b/views/loginadm.ejs
@@ -35,7 +35,7 @@
 			<a href="/goproducto">Tabla Producto</a>
 			<a href="/gocategoria">Tabla Categoria</a>
 			<a href="/">Tabla Usuarios</a>
-			<a href="/paginas/registrarsehtml">Agregar Usuario</a>
+			<a href="/goregistrar">Agregar Usuario</a>
 		</nav>
 		<label for="btn-menu">✖️</label>
 	</div>
