--- a/views/loginadm.ejs
+++ b/views/loginadm.ejs
@@ -31,10 +31,11 @@
 		<nav>
 			<a href="/goproveedor">Tabla Proveedor</a>
 			<a href="/gocliente">Tabla Cliente</a>
-			<a href="/gopedido">Tabla Pedido</a>
+			<a href="/godetallesalida">Tabla Detalle_Salida</a>
+			<a href="/gosalida">Tabla Salida</a>
 			<a href="/goproducto">Tabla Producto</a>
 			<a href="/gocategoria">Tabla Categoria</a>
-			<a href="/">Tabla Usuarios</a>
+			<a href="/gousuario">Tabla Usuarios</a>
 			<a href="/goregistrar">Agregar Usuario</a>
 		</nav>
 		<label for="btn-menu">✖️</label>
