--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -4,38 +4,71 @@
 	<meta charset="UTF-8">
 	<title>La Ceiba</title>
 	<link rel="stylesheet" href="/sources/css/estilos.css">
-	<link rel="shortcut icon" href="sources/img/icons8-oak-tree-16.png" type="image/x-icon">
+	<link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
+        <!-- Link hacia el archivo de estilos css -->
+        <link rel="stylesheet" href="../sources/css/cliente.css">
 	
 </head>
 <body>
-	<header class="header">
-		<div class="container">
-			<div class="logo">
-				<h1>La Ceiba</h1>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+	<script src="https://cdn.datatables,net/1.12.1/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables,net/1.12.1/js/dataTables.bootstrap.min.js"></script>
+	<div id="contenedor">
+		<div id="contenedorcentrado">
+			<div id="login">
+				<form id="loginform" action="/login">
+					<fieldset>
+						<div class="divinput">
+							<label for="id_product">ID PRODUCTO</label>
+							<input type="text" name="id_product" id="id_product" placeholder="ID PRODUCTO" required>
+						</div>
+						<div class="divinput">
+							<label for="id_cat">ID CATEGORIA</label>
+							<input type="text" name="id_cat" id="id_cat" placeholder="ID CATEGORIA" required>
+						</div>
+						<div class="divinput">
+							<label for="id_prov">ID PROVEEDOR</label>
+							<input type="text" name="id_prov" id="id_prov" placeholder="ID PROVEEDOR" required>
+						</div>
+						<div class="divinput">
+							<label for="nombre">NOMBRE</label>
+							<input type="text" name="nombre" id="nombre" placeholder="NOMBRE" required>
+						</div>
+						<div class="divinput">
+							<label for="cantidad">CANTIDAD</label>
+							<input type="text" name="cantidad" id="cantidad" placeholder="CANTIDAD" required>
+						</div>
+						<div class="divinput">
+							<label for="nombre">VALOR</label>
+							<input type="text" name="valor" id="valor" placeholder="VALOR" required>
+						</div>
+						<div class="divbutton">
+							<button type="button">Create</button>
+							<button type="button">Read</button>
+							<button type="button">Update</button>
+							<button type="button">Delete</button>
+							<button type="button">Buscar</button>
+						</div>
+					</fieldset>
+				</form>
 			</div>
-			<nav class="menu">
-				<a href="paginas/inicio_de_sesion.html">Login</a>
-				<a href="/paginas/nosotros.html">Nosotros</a>
-				<a target="_blank" href="https://www.facebook.com/profile.php?id=100066171731818&mibextid=LQQJ4d">Faceboock</a>
-				<a href="#">Contacto</a>
-			</nav>
 		</div>
-	</header>
-	<div class="capa">
-        <div>
-			<input type="text" name="id_produc" id="id_produc" placeholder="ID Producto" required>
-			<input type="text" name="id_cat" id="id_cat" placeholder="ID Categoria" required>
-			<input type="text" name="id_prov" id="id_prov" placeholder="ID Proveedor" required>
-			<input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
-			<input type="number" name="cantidad" id="cantidad" placeholder="Cantidad" required>
-			<input type="number" name="valor" id="valor" placeholder="Valor" required>
-			<button type="button">Create</button>
-			<button type="button">Read</button>
-			<button type="button">Update</button>
-			<button type="button">Delete</button>
-			<button type="button">Buscar</button>
+		<div id="contenedortabla">
+			<table>
+				<tr>
+					<th>ID PRODUCTO</th>
+					<th>ID CATEGORIA</th>
+					<th>ID PROVEEDOR</th>
+					<th>NOMBRE</th>
+					<th>CANTIDAD</th>
+					<th>VALOR</th>
+				</tr>
+				<tbody id="tablaproducto"></tbody>
+				
+			</table>
 		</div>
-    </div>
-
+	</div>
+	
 </body>
 </html>
