--- a/views/proveedor.ejs
+++ b/views/proveedor.ejs
@@ -1,43 +1,68 @@
-<!DOCTYPE html>
+<!-- Define que el documento esta bajo el estandar de HTML 5 -->
+<!doctype html>
+
+<!-- Representa la raíz de un documento HTML o XHTML. Todos los demás elementos deben ser descendientes de este elemento. -->
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<title>La Ceiba</title>
-	<link rel="stylesheet" href="/sources/css/estilos.css">
-	<link rel="shortcut icon" href="sources/img/icons8-oak-tree-16.png" type="image/x-icon">
-	
-</head>
-<body>
-	<header class="header">
-		<div class="container">
-			<div class="logo">
-				<h1>La Ceiba</h1>
-			</div>
-			<nav class="menu">
-				<a href="paginas/inicio_de_sesion.html">Login</a>
-				<a href="/paginas/nosotros.html">Nosotros</a>
-				<a target="_blank" href="https://www.facebook.com/profile.php?id=100066171731818&mibextid=LQQJ4d">Faceboock</a>
-				<a href="#">Contacto</a>
-			</nav>
-		</div>
-	</header>
-	<div class="capa"></div>
-    <div id="contenedorformulario">
-		<form action="">
-			<fieldset>
-
-				<input type="text" name="id_prov" id="" placeholder="ID" required>
-				<input type="text" name="nombre" id="" placeholder="Nombre" required>
-				<input type="text" name="Direccion" id="" placeholder="Direccion" required>
-				<input type="text" name="telfono" id="" placeholder="Telefono" required>
-				<button type="button">Create</button>
-				<button type="button">Read</button>
-				<button type="button">Update</button>
-				<button type="button">Delete</button>
-				<button type="button">Buscar</button>
-			</fieldset>
-		</form>
-	</div>
-
-</body>
+    
+    <head>
+        
+        <meta charset="utf-8">
+        
+        <title>La Ceiba</title>    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Videojuegos & Desarrollo">
+        <meta name="description" content="Ejemplo de formulario de acceso basado en HTML5 y CSS">
+        <meta name="keywords" content="login,formulariode acceso html">
+        <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
+        <!-- Link hacia el archivo de estilos css -->
+        <link rel="stylesheet" href="../sources/css/proveedor.css">
+    </head>
+    <body>
+        <div id="contenedor">
+            <div id="contenedorcentrado">
+				<div id="login">
+					<form id="loginform" action="/login">
+						<fieldset>
+							<div class="divinput">
+								<label for="id_prov">ID</label>
+                                <input type="text" name="id_prov" id="id_prov" placeholder="ID" required>
+                            </div>
+                            <div class="divinput">
+								<label for="nombre">Nombre</label>
+                                <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
+                            </div>
+                            <div class="divinput">
+								<label for="direccion">Direccion</label>
+                                <input type="text" name="direccion" id="direccion" placeholder="Direccion" required>
+                            </div>
+                            <div class="divinput">
+                                <label for="telefono">Telefono</label>
+                                <input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
+                            </div>
+                            <div class="divbutton">
+                                <button type="button">Create</button>
+                                <button type="button">Read</button>
+                                <button type="button">Update</button>
+                                <button type="button">Delete</button>
+                                <button type="button">Buscar</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+            <div id="contenedortabla">
+                <table>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Direccion</th>
+                        <th>Telefono</th>
+                    </tr>
+                    <tbody id="tablaproveedor"></tbody>
+                </table>
+            </div>
+        </div>
+        
+    </body>
 </html>
