--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -44,11 +44,11 @@
 							<input type="text" name="valor" id="valor" placeholder="VALOR" required>
 						</div>
 						<div class="divbutton">
-							<button type="button">Create</button>
-							<button type="button">Read</button>
-							<button type="button">Update</button>
-							<button type="button">Delete</button>
-							<button type="button">Buscar</button>
+							<button type="button" id="create">Create</button>
+							<button type="button" id="read">Read</button>
+							<button type="button" id="update">Update</button>
+							<button type="button" id="delete">Delete</button>
+							<button type="button" id="buscar">Buscar</button>
 						</div>
 					</fieldset>
 				</form>
