--- a/views/proveedor.ejs
+++ b/views/proveedor.ejs
@@ -19,6 +19,14 @@
         <link rel="stylesheet" href="../sources/css/proveedor.css">
     </head>
     <body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+        <script src="https://cdn.datatables,net/1.12.1/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables,net/1.12.1/js/dataTables.bootstrap.min.js"></script>
+        <script >
+            const Eventos=require("/models/eventos");
+            let eventos=new Eventos();
+            eventos.proveedor
+        </script>
         <div id="contenedor">
             <div id="contenedorcentrado">
 				<div id="login">
@@ -41,11 +49,11 @@
                                 <input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
                             </div>
                             <div class="divbutton">
-                                <button type="button">Create</button>
-                                <button type="button">Read</button>
-                                <button type="button">Update</button>
-                                <button type="button">Delete</button>
-                                <button type="button">Buscar</button>
+                                <button type="button" id="create">Create</button>
+                                <button type="button" id="read">Read</button>
+                                <button type="button" id="update">Update</button>
+                                <button type="button" id="delete">Delete</button>
+                                <button type="button" id="buscar">Buscar</button>
                             </div>
                         </fieldset>
                     </form>
