--- a/views/salida.ejs
+++ b/views/salida.ejs
@@ -40,11 +40,11 @@
                                 <input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
                             </div>
                             <div class="divbutton">
-                                <button type="button">Create</button>
-                                <button type="button">Read</button>
-                                <button type="button">Update</button>
-                                <button type="button">Delete</button>
-                                <button type="button">Buscar</button>
+                                <button type="button" id="create">Create</button>
+                                <button type="button" id="read">Read</button>
+                                <button type="button" id="update">Update</button>
+                                <button type="button" id="delete">Delete</button>
+                                <button type="button" id="buscar">Buscar</button>
                             </div>
                         </fieldset>
                     </form>
