--- a/views/cliente.ejs
+++ b/views/cliente.ejs
@@ -62,7 +62,7 @@
                         </tr>
                     </thead>
                     <tbody id="tablacliente">
-                        let dato=<%=dato%>;
+                        <%=dato%>
                     </tbody>
                     
                 </table>
