--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -63,7 +63,11 @@
                         <th>Nombre</th>
                         <th>Descripcion</th>
                     </tr>
-                    <tbody id="tablacategoria"></tbody>
+                    <tbody id="tablacategoria">
+                        <% for( let index = 0; index < dato.length; index++ ) { %>
+                            <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+                            <% } %>
+                    </tbody>
                 </table>
             </div>
         </div>
