--- a/views/cliente.ejs
+++ b/views/cliente.ejs
@@ -62,7 +62,9 @@
                         </tr>
                     </thead>
                     <tbody id="tablacliente">
-                        <%=dato%>
+                        <% for( let index = 0; index < dato.length; index++ ) { %>
+                        <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+                        <% } %>
                     </tbody>
                     
                 </table>
