--- a/views/detallesalida.ejs
+++ b/views/detallesalida.ejs
@@ -67,7 +67,11 @@
                         <th>FECHA</th>
                         <th>CANTIDAD</th>
                     </tr>
-                    <tbody id="tabladetallesalida"></tbody>
+                    <tbody id="tabladetallesalida">
+                        <% for( let index = 0; index < dato.length; index++ ) { %>
+                            <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+                            <% } %>
+                    </tbody>
                     
                 </table>
             </div>
