--- a/views/proveedor.ejs
+++ b/views/proveedor.ejs
@@ -67,7 +67,11 @@
                         <th>Direccion</th>
                         <th>Telefono</th>
                     </tr>
-                    <tbody id="tablaproveedor"></tbody>
+                    <tbody id="tablaproveedor">
+                        <% for( let index = 0; index < dato.length; index++ ) { %>
+                            <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+                            <% } %>
+                    </tbody>
                 </table>
             </div>
         </div>
