Un gran gran cambio

--- a/public/sources/css/cliente.css
+++ b/public/sources/css/cliente.css
@@ -189,7 +189,7 @@ hr {
 table{
     background-color: #379484;
     align-items: center;
-    font-size: 2rem;
+    font-size: 180%
 }
 td{
     padding: 4px;
