--- a/views/cliente.ejs
+++ b/views/cliente.ejs
@@ -22,7 +22,7 @@
         <div id="contenedor">
             <div id="contenedorcentrado">
                 <div id="login">
-                    <form id="loginform" action="/login">
+                    <form id="loginform" action="/crudcliente">
                         <fieldset>
                             <div class="divinput">
                                 <label for="id_cliente">ID</label>
@@ -41,11 +41,11 @@
                                 <input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
                             </div>
                             <div class="divbutton">
-                                <button type="button" id="create" onclick="create.createcategoria()">Create</button>
-                                <button type="button" id="read" onclick="read.readcategoria()">Read</button>
-                                <button type="button" id="update">Update</button>
-                                <button type="button" id="delete">Delete</button>
-                                <button type="button" id="buscar">Buscar</button>
+                                <button type="button" id="create" onclick="">Create</button>
+                                <button type="button" id="read" onclick="">Read</button>
+                                <button type="button" id="update" onclick="">Update</button>
+                                <button type="button" id="delete" onclick="">Delete</button>
+                                <button type="button" id="buscar" onclick="">Buscar</button>
                             </div>
                         </fieldset>
                     </form>
@@ -62,18 +62,15 @@
                         </tr>
                     </thead>
                     <tbody id="tablacliente">
-                        <% for( let index = 0; index < dato.length; index++ ) { %>
-                        <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+                        <% if (dato.length) { %>
+                            <% for( let index = 0; index < dato.length; index++ ) { %>
+                            <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+                            <% } %>
                         <% } %>
                     </tbody>
                     
                 </table>
             </div>
         </div>
-        
-        <script>document.getElementById("#tablacliente").innerHTML=dato;</script>
-        <script type="text/javascript" src="./../models/read.js">
-            readcliente();
-        </script>
     </body>
 </html>
