--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -6,18 +6,13 @@
 	<link rel="stylesheet" href="/sources/css/estilos.css">
 	<link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-        <!-- Link hacia el archivo de estilos css -->
         <link rel="stylesheet" href="../sources/css/cliente.css">
-	
 </head>
 <body>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-	<script src="https://cdn.datatables,net/1.12.1/js/jquery.dataTables.min.js"></script>
-	<script src="https://cdn.datatables,net/1.12.1/js/dataTables.bootstrap.min.js"></script>
 	<div id="contenedor">
 		<div id="contenedorcentrado">
 			<div id="login">
-				<form id="loginform" action="/login">
+				<form id="loginform" >
 					<fieldset>
 						<div class="divinput">
 							<label for="id_product">ID PRODUCTO</label>
@@ -40,15 +35,15 @@
 							<input type="text" name="cantidad" id="cantidad" placeholder="CANTIDAD" required>
 						</div>
 						<div class="divinput">
-							<label for="nombre">VALOR</label>
+							<label for="valor">VALOR</label>
 							<input type="text" name="valor" id="valor" placeholder="VALOR" required>
 						</div>
 						<div class="divbutton">
-							<button type="button" id="create">Create</button>
-							<button type="button" id="read">Read</button>
-							<button type="button" id="update">Update</button>
-							<button type="button" id="delete">Delete</button>
-							<button type="button" id="buscar">Buscar</button>
+							<button type="button" id="create" onclick="">Create</button>
+                            <button type="button" id="read" onclick="">Read</button>
+                            <button type="button" id="update" onclick="">Update</button>
+                            <button type="button" id="delete" onclick="">Delete</button>
+                            <button type="button" id="buscar" onclick="">Buscar</button>
 						</div>
 					</fieldset>
 				</form>
@@ -65,14 +60,14 @@
 					<th>VALOR</th>
 				</tr>
 				<tbody id="tablaproducto">
-					<% for( let index = 0; index < dato.length; index++ ) { %>
-						<tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+					<% if (dato.length>0) { %>
+						<% for( let index = 0; index < dato.length; index++ ) { %>
+							<tr><td><%=dato[index].id_producto %></td><td><%=dato[index].id_cat %></td><td><%= dato[index].id_prov %></td><td><%=dato[index].nombre %></td><td><%=dato[index].cantidad%></td><td><%=dato[index].valor%></td></tr>
 						<% } %>
+					<% } %>
 				</tbody>
-				
 			</table>
 		</div>
 	</div>
-	
 </body>
 </html>
