--- a/views/salida.ejs
+++ b/views/salida.ejs
@@ -1,13 +1,7 @@
-<!-- Define que el documento esta bajo el estandar de HTML 5 -->
 <!doctype html>
-
-<!-- Representa la raíz de un documento HTML o XHTML. Todos los demás elementos deben ser descendientes de este elemento. -->
 <html lang="es">
-    
     <head>
-        
         <meta charset="utf-8">
-        
         <title>La Ceiba</title>    
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Videojuegos & Desarrollo">
@@ -15,36 +9,32 @@
         <meta name="keywords" content="login,formulariode acceso html">
         <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-        <!-- Link hacia el archivo de estilos css -->
         <link rel="stylesheet" href="../sources/css/cliente.css">
     </head>
     <body>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-        <script src="https://cdn.datatables,net/1.12.1/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables,net/1.12.1/js/dataTables.bootstrap.min.js"></script>
         <div id="contenedor">
             <div id="contenedorcentrado">
                 <div id="login">
-                    <form id="loginform" action="/login">
+                    <form id="loginform">
                         <fieldset>
                             <div class="divinput">
-                                <label for="nombre">ID SALIDA</label>
-                                <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
+                                <label for="id_salida">ID SALIDA</label>
+                                <input type="text" name="id_salida" id="id_salida" placeholder="Nombre" required>
                             </div>
                             <div class="divinput">
-                                <label for="direccion">ID CLIENTE</label>
-                                <input type="text" name="direccion" id="direccion" placeholder="Direccion" required>
+                                <label for="id_cliente">ID CLIENTE</label>
+                                <input type="text" name="id_cliente" id="id_cliente" placeholder="Direccion" required>
                             </div>
                             <div class="divinput">
-                                <label for="telefono">FECHA</label>
-                                <input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
+                                <label for="fecha">FECHA</label>
+                                <input type="text" name="fecha" id="fecha" placeholder="FECHA" required>
                             </div>
                             <div class="divbutton">
-                                <button type="button" id="create">Create</button>
-                                <button type="button" id="read">Read</button>
-                                <button type="button" id="update">Update</button>
-                                <button type="button" id="delete">Delete</button>
-                                <button type="button" id="buscar">Buscar</button>
+                                <button type="button" id="create" onclick="">Create</button>
+                                <button type="button" id="read" onclick="">Read</button>
+                                <button type="button" id="update" onclick="">Update</button>
+                                <button type="button" id="delete" onclick="">Delete</button>
+                                <button type="button" id="buscar" onclick="">Buscar</button>
                             </div>
                         </fieldset>
                     </form>
@@ -58,14 +48,14 @@
                         <th>FECHA</th>
                     </tr>
                     <tbody id="tablasalida">
-                        <% for( let index = 0; index < dato.length; index++ ) { %>
-                            <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td></tr>
+                        <% if (dato.length>0) { %>
+                            <% for( let index = 0; index < dato.length; index++ ) { %>
+                                <tr><td><%=dato[index].id_salida%></td><td><%=dato[index].cliente%></td><td><%= dato[index].fecha %></td></tr>
                             <% } %>
+                        <% } %>
                     </tbody>
-                    
                 </table>
             </div>
         </div>
-        
     </body>
 </html>
