--- a/views/formupdatecategoria.ejs
+++ b/views/formupdatecategoria.ejs
@@ -26,7 +26,7 @@
 								<input type="text" name="descripcion" id="descripcion" placeholder="Descripcion" required>
                             </div>
                             <div class="divbutton">
-                                <button id="create" type="submit">Agregar</button>
+                                <button id="create" type="submit">Actualizar</button>
                             </div>
                         </fieldset>
                     </form>
