--- a/views/formupdatecategoria.ejs
+++ b/views/formupdatecategoria.ejs
@@ -15,7 +15,7 @@
 		<div id="contenedor">
 			<div id="contenedorcentrado">
 				<div id="login">
-					<form id="loginform" action="/updatecategoria/<%=dato[0].id_cat%>">
+					<form id="loginform" action="/updatecategoria/<%=dato%>">
 						<fieldset>
                             <div class="divinput">
 								<label for="nombre">Nombre</label>
