--- a/views/detallesalida.ejs
+++ b/views/detallesalida.ejs
@@ -13,42 +13,8 @@
     </head>
     <body>
         <div id="contenedor">
-            <div id="contenedorcentrado">
-                <div id="login">
-                    <form id="loginform"  action="/cruddetallesalida">
-                        <fieldset>
-                            <div class="divinput">
-                                <label for="id_detallesalida">ID DETALLE SALIDA</label>
-                                <input type="text" name="id_detallesalida" id="id_detallesalida" placeholder="ID" required>
-                            </div>
-                            <div class="divinput">
-                                <label for="id_salida">ID SALIDA</label>
-                                <input type="text" name="id_salida" id="id_salida" placeholder="ID SALIDA" required>
-                            </div>
-                            <div class="divinput">
-                                <label for="id_product">ID PRODUCTO</label>
-                                <input type="text" name="id_product" id="id_product" placeholder="Direccion" required>
-                            </div>
-                            <div class="divinput">
-                                <label for="fecha">FECHA</label>
-                                <input type="text" name="fecha" id="fecha" placeholder="FECHA" required>
-                            </div>
-                            <div class="divinput">
-                                <label for="cantidad">CANTIDAD</label>
-                                <input type="text" name="cantidad" id="cantidad" placeholder="CANTIDAD" required>
-                            </div>
-                            <div class="divbutton">
-                                <button type="button" id="create" onclick="">Create</button>
-                                <button type="button" id="read" onclick="">Read</button>
-                                <button type="button" id="update" onclick="">Update</button>
-                                <button type="button" id="delete" onclick="">Delete</button>
-                                <button type="button" id="buscar" onclick="">Buscar</button>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
             <div id="contenedortabla">
+                <a href="/goformcreatedetallesalida"><img src="./sources/img/plus.png" alt="createcliente"></a>
                 <table>
                     <tr>
                         <th>ID DETALLE SALIDA</th>
@@ -60,7 +26,7 @@
                     <tbody id="tabladetallesalida">
                         <% if (dato.length) { %>
                             <% for( let index = 0; index < dato.length; index++ ) { %>
-                                <tr><td><%=dato[index].id_detallesalida%></td><td><%=dato[index].id_salida%></td><td><%= dato[index].id_product %></td><td><%=dato[index].fecha%></td><td><%=dato[index].cantidad%></td></tr>
+                                <tr><td><%=dato[index].id_detallesalida%></td><td><%=dato[index].id_salida%></td><td><%= dato[index].id_product %></td><td><%=dato[index].fecha%></td><td><%=dato[index].cantidad%></td><td><a href="/goformupdatedetallesalida/<%=dato[index].id_detallesalida%>"><img src="./sources/img/edit.png" alt="update"></a></td><td><a href="/deletedetallesalida/<%=dato[index].id_detallesalida%>"><img src="./sources/img/cross.png" alt="delete"></a></td></tr>
                             <% } %>
                         <% } %>
                     </tbody>
