--- a/views/formupdateproveedor.ejs
+++ b/views/formupdateproveedor.ejs
@@ -1,13 +1,7 @@
-<!-- Define que el documento esta bajo el estandar de HTML 5 -->
 <!doctype html>
-
-<!-- Representa la raíz de un documento HTML o XHTML. Todos los demás elementos deben ser descendientes de este elemento. -->
 <html lang="es">
-    
     <head>
-        
         <meta charset="utf-8">
-        
         <title>La Ceiba</title>    
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Videojuegos & Desarrollo">
@@ -15,21 +9,20 @@
         <meta name="keywords" content="login,formulariode acceso html">
         <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-        <!-- Link hacia el archivo de estilos css -->
-        <link rel="stylesheet" href="../sources/css/cliente.css">
+        <link rel="stylesheet" href="../sources/css/proveedor.css">
     </head>
     <body>
         <div id="contenedor">
             <div id="contenedorcentrado">
-                <div id="login">
-                    <form id="loginform" action="/updatecliente/<%=dato%>">
-                        <fieldset>
+				<div id="login">
+					<form id="loginform" action="/updateproveedor/<%=dato%>">
+						<fieldset>
                             <div class="divinput">
-                                <label for="nombre">Nombre</label>
+								<label for="nombre">Nombre</label>
                                 <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
                             </div>
                             <div class="divinput">
-                                <label for="direccion">Direccion</label>
+								<label for="direccion">Direccion</label>
                                 <input type="text" name="direccion" id="direccion" placeholder="Direccion" required>
                             </div>
                             <div class="divinput">
@@ -37,7 +30,7 @@
                                 <input type="text" name="telefono" id="telefono" placeholder="Telefono" required>
                             </div>
                             <div class="divbutton">
-                                <button type="submit" id="create" >Actualizar</button>
+                                <button type="submit" id="create" >Agregar</button>
                             </div>
                         </fieldset>
                     </form>
