--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -10,46 +10,8 @@
 </head>
 <body>
 	<div id="contenedor">
-		<div id="contenedorcentrado">
-			<div id="login">
-				<form id="loginform" >
-					<fieldset>
-						<div class="divinput">
-							<label for="id_product">ID PRODUCTO</label>
-							<input type="text" name="id_product" id="id_product" placeholder="ID PRODUCTO" required>
-						</div>
-						<div class="divinput">
-							<label for="id_cat">ID CATEGORIA</label>
-							<input type="text" name="id_cat" id="id_cat" placeholder="ID CATEGORIA" required>
-						</div>
-						<div class="divinput">
-							<label for="id_prov">ID PROVEEDOR</label>
-							<input type="text" name="id_prov" id="id_prov" placeholder="ID PROVEEDOR" required>
-						</div>
-						<div class="divinput">
-							<label for="nombre">NOMBRE</label>
-							<input type="text" name="nombre" id="nombre" placeholder="NOMBRE" required>
-						</div>
-						<div class="divinput">
-							<label for="cantidad">CANTIDAD</label>
-							<input type="text" name="cantidad" id="cantidad" placeholder="CANTIDAD" required>
-						</div>
-						<div class="divinput">
-							<label for="valor">VALOR</label>
-							<input type="text" name="valor" id="valor" placeholder="VALOR" required>
-						</div>
-						<div class="divbutton">
-							<button type="button" id="create" onclick="">Create</button>
-                            <button type="button" id="read" onclick="">Read</button>
-                            <button type="button" id="update" onclick="">Update</button>
-                            <button type="button" id="delete" onclick="">Delete</button>
-                            <button type="button" id="buscar" onclick="">Buscar</button>
-						</div>
-					</fieldset>
-				</form>
-			</div>
-		</div>
 		<div id="contenedortabla">
+			<a href="/goformcreateproducto"><img src="./sources/img/plus.png" alt="createcliente"></a>
 			<table>
 				<tr>
 					<th>ID PRODUCTO</th>
@@ -62,7 +24,7 @@
 				<tbody id="tablaproducto">
 					<% if (dato.length>0) { %>
 						<% for( let index = 0; index < dato.length; index++ ) { %>
-							<tr><td><%=dato[index].id_producto %></td><td><%=dato[index].id_cat %></td><td><%= dato[index].id_prov %></td><td><%=dato[index].nombre %></td><td><%=dato[index].cantidad%></td><td><%=dato[index].valor%></td></tr>
+							<tr><td><%=dato[index].id_producto %></td><td><%=dato[index].id_cat %></td><td><%= dato[index].id_prov %></td><td><%=dato[index].nombre %></td><td><%=dato[index].cantidad%></td><td><%=dato[index].valor%></td><td><a href="/goformupdateproducto/<%=dato[index].id_producto%>"><img src="./sources/img/edit.png" alt="update"></a></td><td><a href="/deleteproducto/<%=dato[index].id_producto%>"><img src="./sources/img/cross.png" alt="delete"></a></td></tr>
 						<% } %>
 					<% } %>
 				</tbody>
